Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37711

TabView is crashing because unset owner (Fix inside)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.3.0 RC1
    • 5.3.0 Alpha, 5.3.0 Beta1, 5.3.0 RC1, 5.3.0
    • Quick: Controls 1
    • None
    • 8b371173c4fed7df453a0e352af54e3363709d4b (qtdeclarative)

      Starting on 5.3, A big regression impacted me.

      I have a TabView, and insert tabs dynamically. like:

      var component = Qt.createComponent("SearchResultPage.qml");
      var tab = tabsView.addTab(item.myTerm, component)
      

      Which works nice on 5.2, however on 5.3 it disappears my tab and crash.

      In 5.2, the insertTab had this workaround:

          function insertTab(index, title, component) {
              // 'loader' parent is a pending workaround while waiting for:
              // https://codereview.qt-project.org/#change,65788
              var tab = tabcomp.createObject(loader)
      

      However on 5.3, it was removed.

      Putting back the workaround, my applications works nice and stop crashing.
      One thing to note is that https://codereview.qt-project.org/#change,65788 was abandoned.

      Actually the TabView is completely unusable with constant crashes.

        1. Bug.zip
          1 kB
          Bruno Cabral
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            shausman Simon Hausmann
            bratao Bruno Cabral
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes