src/quick/items/qquickwindowmodule.cpp
@@ -41,6 +41,7 @@
 
 #include "qquickwindowmodule_p.h"
 #include "qquickscreen_p.h"
+#include "qquickview_p.h"
 #include <QtQuick/QQuickWindow>
 #include <QtCore/QCoreApplication>
 #include <QtQml/QQmlEngine>
@@ -91,11 +92,18 @@ Q_SIGNALS:
 
 protected:
     void classBegin() {
+        QQmlEngine* e = qmlEngine(this);
         //Give QQuickView behavior when created from QML with QQmlApplicationEngine
         if (QCoreApplication::instance()->property("__qml_using_qqmlapplicationengine") == QVariant(true)) {
-            QQmlEngine* e = qmlEngine(this);
             if (e && !e->incubationController())
                 e->setIncubationController(incubationController());
+        }
+        Q_ASSERT(e);
+        {
+            QV4::ExecutionEngine *v4 = QQmlEnginePrivate::getV4Engine(e);
+            QV4::Scope scope(v4);
+            QV4::ScopedObject v(scope, new (v4->memoryManager) QQuickRootItemMarker(e, this));
+            rootItemMarker = v;
         }
     }
 
@@ -158,6 +166,7 @@ private:
     bool m_complete;
     bool m_visible;
     Visibility m_visibility;
+    QV4::PersistentValue rootItemMarker;
 };
 
 void QQuickWindowModule::defineModule()
